add getAll pet
